# python_project_template

./: README.md  pyproject.sh
files/: Dockerfile  Makefile  docker-compose.yml  format.sh  mkdocs.yml  pre-commit  preview_docs.sh  publish.sh  publish_docs.sh  publish_docs.yml  publish_pypi.yml  pyproject.toml  scaffolding.sh  test.sh  test_suite.yml
