[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_name"
authors = [
    {name ="_author", email="@"},
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ""
dependencies = [

]
[project.urls]
Documentation = "http://....github.io/project_name"
Source = "https://github.com/.../project_name"

[project.optional-dependencies]
test = [
	"pytest >=?, <",
	"pytest-cov >=?, <",
]
docs = [
	"mkdocs-material >=?, <",
	"mkdocstrings[python] >=?, <",
]
dev = [
	"black >=?, <",
	"flake8 >=?, <",
	"isort >=?, <",
    "pydocstyle[toml] >=?, <",
]

[tool.black]
line-length = 79
target-version = [""]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pydocstyle]
inherit = false
ignore = "D100,D107,D213,D203,D405,D406,D407,D413"
