[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_name"
authors = [
    {name ="_author", email="@"},
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ""
dependencies = [

]
[project.urls]
Documentation = "http://....github.io/project_name"
Source = "https://github.com/.../project_name"

[project.optional-dependencies]
test = [
	"pytest >=?, <",
	"pytest-cov >=?, <",
]
docs = [
	"mkdocs-material >=?, <",
	"mkdocstrings[python] >=?, <",
]
dev = [
	"ruff >=?, <",
]

[tool.ruff]
target-version = "py312"
line-length = 79
fix = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
